--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-dropdown-picker": "^5.1.21",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
